# rsa_aes_miniproject

./: .gitignore  Dockerfile  README.md  docker-compose-mac.yml  docker-compose.yml  pyproject.toml  requirements.txt
client/: Alice.html  Bob.html  Dockerfile  README.md  client.md  client.py  styles.css  wsgi.py
client/static/: landing_page.css  styles.css
client/templates/: base.html  chat.html  index.html  login.html
docs/: Lab Report - RSA-AES Chat App.docx  apis.md
server/: Dockerfile  README.md  api.py  api_server.md  server.py
